fixed nav alignment

--- a/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
+++ b/Arbeidskrav-DS3103-Webutvikling-H25/css/main.css
@@ -37,6 +37,12 @@ body {
   gap: 3rem;
   color: #fff8e1;
   margin-right: 20px;
+  align-items: center;
+}
+
+.header-banner__nav-item {
+  display: flex;
+  align-items: center;
 }
 
 /* Nav items (useful for hover effects) */
